# asher-test

./: .gitattributes  CHANGELOG.md  README.md  SETUP.txt  UPLOAD_INSTRUCTIONS.txt  goal_animation.py
.github/workflows/: build-installer.yml
assets/: matchup_colors.csv
assets/animations/sweep_backgrounds/: README.txt
assets/banners/teams/: readme.txt
assets/data/: matchup_colors.csv
assets/logos/teams/: readme.txt
assets/sprites/teams/: readme.txt
backend/: pyproject.toml
backend/src/nhlsb/: __main__.py  engine.py  main.py
backend/src/nhlsb/core/: fonts.py  matchup.py  models.py  nhl.py  renderer.py  seg.py  sprites.py  teams.py  themes.py
backend/src/nhlsb/project/: manager.py
backend/src/nhlsb/runtime/: engine.py
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/installer/: installer.nsi
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  PI_DEPLOYMENT.md  nhlsb.service
examples/: broadcast-studio.nhlsb  cycling-live.nhlsb  default.nhlsb  minimalist-bar.nhlsb  retro-led.nhlsb
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: client.ts  ws.ts
frontend/src/components/: ErrorBoundary.tsx  FavoriteTeamModal.tsx  FullscreenScoreboard.tsx  Preview.tsx  TeamPickerModal.tsx  Toolbar.tsx
frontend/src/lib/: config.ts  tauri.ts  utils.ts
frontend/src/store/: project.ts
frontend/src/styles/: globals.css
frontend/src/types/: project.ts
(+8 files in other folders)
